--- a/ecommerce/app/views/layouts/application.html.erb
+++ b/ecommerce/app/views/layouts/application.html.erb
@@ -2,13 +2,42 @@
 <html>
   <head>
     <title><%= t "title" %></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1,
+      maximum-scale=1">
+    <meta name="viewport" content="user-scalable=no, width=device-width,
+      initial-scale=1.0"/>
+    <%= stylesheet_link_tag    "application", media: "all",
+      "data-turbolinks-track": true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track": true %>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag "application", media: "all",
-      "data-turbolinks-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
   </head>
-
-  <body>
-    <%= yield %>
+  <body class="ps-static  cms-index-index cms-home">
+    <div class="wrapper ps-static en-lang-class">
+      <div class="header-container">
+        <div class="page">
+          <%= render "layouts/header" %>
+          <div class="main-container col2-left-layout">
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="main">
+                    <div class="row">
+                      <div class="col-main col-xs-12 col-sm-9">
+                        <div class="padding-s">
+                          <%= yield %>
+                        </div>
+                      </div>
+                      <%= render "layouts/sidebar" %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <%= render "layouts/footer" %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
