--- a/ecommerce/app/assets/stylesheets/products.scss
+++ b/ecommerce/app/assets/stylesheets/products.scss
@@ -34,7 +34,8 @@
   margin-left: 0px;
 }
 #hintDiv {
-  padding-top: 15px;
+  width:60%;
+  border: 1px solid #ccc;
 }
 img.raty-cancel {
   display: none;
